<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WelcomeActivity"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/grey"
    >

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:src="@drawable/welcome_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/function"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/brand_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/slogan"
        android:fontFamily="@font/muli"
        android:textColor="@color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/brown"
            android:onClick="callLoginFromWel"
            android:text="@string/login"
            android:textColor="@color/white"
            android:transitionName="transition_login"


            />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/brown"
            android:text="@string/register"
            android:textColor="@color/white"
            android:onClick="callSignUpFromWel"
            android:transitionName="transition_signup"/>

    </LinearLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/howwork"
        android:textColor="@color/white"
        app:backgroundTint="@color/brown" />

</LinearLayout>
